# nw

./: .clang-tidy  CMakeLists.txt  LICENSE.md  README.md
include/nw/: bitmap.h  color.h  surface.h  window.h  window_desc.h
include/nw/Event/: ApplicationEvent.h  event.h  event_bus.h
src/: color.cpp
src/Event/: event_bus.cpp
src/Windows/: window_win32.cpp
